--- a/Assignment3/css/style.css
+++ b/Assignment3/css/style.css
@@ -49,7 +49,8 @@ header ul a {
   font-weight: 600;
   padding: 8px 24px;
 }
-header ul a:hover {
+header a:hover,
+.active {
   border: 1px solid #fff;
   border-radius: 100px;
   color: #fff;
