--- a/Assignment4/css/style.css
+++ b/Assignment4/css/style.css
@@ -7,18 +7,21 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 header {
   height: 91px;
-  padding: 30px 0;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 header .container {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 70px;
 }
 
@@ -33,6 +36,9 @@ header ul {
   gap: 21px;
 }
 
+header .container span h3 i {
+  display: none;
+}
 header a {
   text-decoration: none;
   color: #fff;
@@ -59,6 +65,7 @@ header ul {
 .navLinks a {
   padding: 10px 3px;
 }
+
 .navLinks a:hover {
   border: 1px solid #fff;
   /* padding: 10px 3px; */
@@ -232,7 +239,8 @@ span {
 .industry .container {
   margin: 0 auto;
 
-  padding: 112px 0;
+  padding-top: 112px;
+  padding-bottom: 112px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -331,11 +339,16 @@ span {
   padding: 0;
 }
 
-.projects .container {
-  width: 100%;
-  padding: 112px 0;
-  text-align: center;
+.projects {
   background-color: #252b42;
+}
+
+.projects .container {
+  max-width: 100%;
+  padding-top: 112px;
+  padding-bottom: 112px;
+  text-align: center;
+  /* background-color: #252b42; */
   color: #fff;
 }
 
@@ -366,14 +379,14 @@ span {
   gap: 30px;
   /* text-align: end; */
   list-style: none;
-  margin: 0 15px;
+  /* margin: 0 15px; */
   /* margin-bottom: 112px; */
 }
 
 .projectItem1 {
   padding: 18px 20px;
   color: #fff;
-  width: 331px;
+  /* width: 331px; */
   height: 452px;
   overflow: hidden;
   background: linear-gradient(
@@ -423,7 +436,7 @@ span {
 .projectItem2 {
   padding: 18px 20px;
   color: #fff;
-  width: 331px;
+  /* width: 331px; */
   height: 452px;
   overflow: hidden;
   background: linear-gradient(
@@ -436,7 +449,7 @@ span {
 .projectItem3 {
   padding: 18px 20px;
   color: #fff;
-  width: 331px;
+  /* width: 331px; */
   height: 452px;
   overflow: hidden;
   background: linear-gradient(
@@ -449,7 +462,7 @@ span {
 .projectItem4 {
   padding: 18px 20px;
   color: #fff;
-  width: 331px;
+  /* width: 331px; */
   height: 452px;
   overflow: hidden;
   background: linear-gradient(
@@ -484,7 +497,8 @@ footer .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 25px 0;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .footerLinks ul {
@@ -533,4 +547,207 @@ footer .container {
   font-weight: 600;
   line-height: 24px;
   letter-spacing: 0.2px;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    padding: 0 20px;
+  }
+
+  /* .banner {
+    margin-top: -91px;
+  } */
+}
+
+@media (max-width: 992px) {
+  .projects a {
+    padding: 5px 18px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 20px;
+  }
+}
+
+@media ((max-width: 992px)  and (min-width:768px)) {
+  header .container {
+    gap: 20px;
+    align-items: center;
+  }
+
+  .authMember {
+    padding: 7.5px 10px;
+    font-size: 12px;
+  }
+}
+
+/* Mobile & Tablet Combined smaller view */
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+
+  header {
+    padding: 0px;
+    min-height: 50vh;
+    background-color: #252b42;
+  }
+
+  header .container {
+    background-color: #252b42;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    padding-top: 20px;
+    align-items: self-start;
+    height: 100%; /* Make container fill the header's height */
+  }
+
+  header nav {
+    flex-grow: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    padding: 50px 0;
+  }
+
+  header .container span i {
+    display: block;
+    font-size: 30px;
+  }
+
+  header .container span {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .navLinks {
+    height: 100%;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .navLinks a {
+    font-size: 30px;
+  }
+
+  .authLinks {
+    display: none;
+  }
+
+  .banner {
+    margin-top: 0;
+  }
+
+  .banner .container {
+    flex-direction: column;
+  }
+
+  .bannerContent {
+    padding: 30px;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .bannerContent h1 {
+    font-size: 40px;
+    line-height: 57px;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .bannerButton {
+    flex-direction: column;
+    gap: 25px;
+  }
+
+  .features .container ul {
+    flex-direction: column;
+  }
+
+  .industry .container {
+    flex-direction: column;
+  }
+
+  .industry ul {
+    flex-direction: column;
+  }
+
+  .industry .reviewImage {
+    display: none;
+  }
+
+  .industry ul {
+    margin: 0;
+    gap: 30px;
+    padding: 0 30px;
+  }
+
+  .industryInfo h2 {
+    line-height: 57px;
+  }
+
+  .industryInfo {
+    padding: 0 30px;
+  }
+
+  .reviewCard {
+    margin: 0 auto;
+  }
+
+  .projects ul {
+    flex-direction: column;
+    padding: 0 20px;
+  }
+
+  .itemDetails {
+    gap: 20px;
+  }
+  .projects a {
+    padding: 10px 36px;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 22px;
+  }
+
+  .itemDetails h5 {
+    font-size: 24px;
+  }
+
+  footer .container {
+    flex-direction: column;
+    /* align-items: center; */
+    text-align: center;
+  }
+
+  .footerLinks .container {
+    padding: 50px 80px;
+  }
+
+  .footerLinks ul {
+    flex-direction: column;
+    align-items: first baseline;
+    text-align: left;
+  }
+
+  .footerText .container {
+    padding: 25px 0;
+    padding-bottom: 30px;
+
+    align-items: first baseline;
+    text-align: left;
+    gap: 20px;
+  }
+
+  .footerText {
+    background-color: #252b42;
+    padding: 0px 80px;
+  }
+  .footerText h6 {
+    color: #fff;
+  }
 }
